Fix text clipping on app favourite card

--- a/src/frontend/packages/core/src/shared/components/multiline-title/multiline-title.component.scss
+++ b/src/frontend/packages/core/src/shared/components/multiline-title/multiline-title.component.scss
@@ -8,7 +8,7 @@
   -webkit-box-orient: vertical;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  max-height: 2.4em;
+  max-height: 2.5em;
   overflow: hidden;
   position: relative;
   text-overflow: ellipsis;
